--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <script src="/js/main.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div id="text">
+            <textarea placeholder="Paste/type your content here to be counted."></textarea>
+        </div>
+        <div id="details">
+            <div>
+                <h1>Words:</h1>
+                <h3 id="#words"></h3>
+            </div>
+            <div>
+                <h1>Characters:</h1>
+                <h3 id="#chars"></h3>
+            </div>
+        </div>
+        <div id="footer">Simple Word Counter</div>
+    </div>
 </body>
 </html>
