--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         </div>
         <div id="details">
             <div>
-                <h1>Words:</h1>
-                <h2 id="words">0</h3>
+                <span class="h1">Words:</span>
+                <span class="h1" id="words">0</span>
             </div>
             <div>
-                <h1>Characters:</h1>
-                <h2 id="chars">0</h3>
+                <span class="h1">Characters:</span>
+                <span class="h1" id="chars">0</span>
             </div>
         </div>
         <div id="footer">Simple Word Counter</div>
