--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <span class="h1" id="chars">0</span>
             </div>
         </div>
-        <div id="footer">Simple Word Counter</div>
+        <div id="footer"><a href="https://github.com/hari-govind/simple-word-counter">Simple Word Counter</a></div>
     </div>
 </body>
 <script src="js/main.js"></script>
